unpackaged/main/default/objects/Order_Line_Item__c/fields/Autorizaci_n_Cantidad_Rechazada__c.field-meta.xml
<CustomField>
    <fullName>Autorizaci_n_Cantidad_Rechazada__c</fullName>
    <label>Autorización Cantidad Rechazada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>