unpackaged/main/default/objects/Order_Line_Item__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <formula>Cantidad_de_Piezas__c -  Piezas_Faltantes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad de Piezas Recibidas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>