unpackaged/main/default/objects/Order_Line_Item__c/fields/Cantidad_de_Piezas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Piezas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cantidad de Piezas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>