unpackaged/main/default/objects/Order_Line_Item__c/fields/Cantidad_Entregada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Entregada__c</fullName>
    <label>Cantidad Entregada</label>
    <summarizedField>Informacion_De_Lote__c.Piezas_Recibidas__c</summarizedField>
    <summaryForeignKey>Informacion_De_Lote__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>