unpackaged/main/default/objects/Order_Line_Item__c/fields/Cantidad_Rechazada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Rechazada__c</fullName>
    <label>Aprobación Cantidad Rechazada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>