unpackaged/main/default/objects/Order_Line_Item__c/fields/Cantidad_Recibida__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Recibida__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cantidad recibida en UMU al momento de recibir la entrega.</description>
    <label>Cantidad Recibida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>