unpackaged/main/default/objects/Order_Line_Item__c/fields/Cantidad_Solicitada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Solicitada__c</fullName>
    <label>Cantidad Solicitada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>