unpackaged/main/default/objects/Order_Line_Item__c/fields/Clave_del_Insumo__c.field-meta.xml
<CustomField>
    <fullName>Clave_del_Insumo__c</fullName>
    <formula>Product__r.Product_Code_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clave del Insumo</label>
    <type>Text</type>
</CustomField>