unpackaged/main/default/objects/Order_Line_Item__c/fields/Consumido_DPN__c.field-meta.xml
<CustomField>
    <fullName>Consumido_DPN__c</fullName>
    <label>Consumido DPN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>