unpackaged/main/default/objects/Order_Line_Item__c/fields/Costo__c.field-meta.xml
<CustomField>
    <fullName>Costo__c</fullName>
    <label>Costo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>