unpackaged/main/default/objects/Order_Line_Item__c/fields/Costo_Promedio__c.field-meta.xml
<CustomField>
    <fullName>Costo_Promedio__c</fullName>
    <label>Costo Promedio</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>