unpackaged/main/default/objects/Order_Line_Item__c/fields/Dispobible_a_Solicitar__c.field-meta.xml
<CustomField>
    <fullName>Dispobible_a_Solicitar__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Tipo_de_Pedido__c)), OR(Tipo_de_Pedido__c != &#39;Ordinario&#39;, Tipo_de_Pedido__c != &#39;Programa&#39;)), 99, IF(AND(AND(NOT(ISBLANK(L_mite_Mensual_DPN__c)),NOT(ISBLANK(Consumido_DPN__c)),L_mite_Mensual_DPN__c &gt; Consumido_DPN__c)), L_mite_Mensual_DPN__c - Consumido_DPN__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispobible a Solicitar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>