unpackaged/main/default/objects/Order_Line_Item__c/fields/Disponible_en_CENADI__c.field-meta.xml
<CustomField>
    <fullName>Disponible_en_CENADI__c</fullName>
    <label>Disponible en CENADI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>