unpackaged/main/default/objects/Order_Line_Item__c/fields/En_Tr_nsito__c.field-meta.xml
<CustomField>
    <fullName>En_Tr_nsito__c</fullName>
    <label>En Tránsito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>