unpackaged/main/default/objects/Order_Line_Item__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verificando Disponibilidad</fullName>
            </value>
            <value>
                <fullName>Preparando Envío</fullName>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>En Firma</fullName>
            </value>
            <value>
                <fullName>Recibido Parcial</fullName>
            </value>
            <value>
                <fullName>Autorizado</fullName>
                <isActive>false</isActive>
                <label>Autorizado</label>
            </value>
            <value>
                <fullName>Rechazado</fullName>
                <isActive>false</isActive>
                <label>Rechazado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>