unpackaged/main/default/objects/Order_Line_Item__c/fields/Estatus_Autorizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Autorizaci_n__c</fullName>
    <label>Estatus Autorización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Autorizado</fullName>
            </value>
            <value>
                <fullName>Modificado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>