unpackaged/main/default/objects/Order_Line_Item__c/fields/Estatus_de_Orden__c.field-meta.xml
<CustomField>
    <fullName>Estatus_de_Orden__c</fullName>
    <formula>TEXT(Order__r.Estatus__c)</formula>
    <label>Estatus de Orden</label>
    <type>Text</type>
</CustomField>