unpackaged/main/default/objects/Order_Line_Item__c/fields/Existencia_en_UMU__c.field-meta.xml
<CustomField>
    <fullName>Existencia_en_UMU__c</fullName>
    <label>Existencia en UMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>