unpackaged/main/default/objects/Order_Line_Item__c/fields/Fecha_de_Expiracion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Expiracion__c</fullName>
    <label>Fecha de Expiración</label>
    <type>Date</type>
</CustomField>