unpackaged/main/default/objects/Order_Line_Item__c/fields/Folio_de_Desviaci_n__c.field-meta.xml
<CustomField>
    <fullName>Folio_de_Desviaci_n__c</fullName>
    <label>Folio de Desviación</label>
    <length>8</length>
    <type>Text</type>
</CustomField>