unpackaged/main/default/objects/Order_Line_Item__c/fields/Folio_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Folio_de_Pedido__c</fullName>
    <label>Folio de Pedido</label>
    <length>12</length>
    <type>Text</type>
</CustomField>