unpackaged/main/default/objects/Order_Line_Item__c/fields/L_mite_Mensual_DPN__c.field-meta.xml
<CustomField>
    <fullName>L_mite_Mensual_DPN__c</fullName>
    <label>Límite Mensual DPN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>