unpackaged/main/default/objects/Order_Line_Item__c/fields/Motivo_No_Aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Motivo_No_Aprobaci_n__c</fullName>
    <label>Motivo No Aprobación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>