unpackaged/main/default/objects/Order_Line_Item__c/fields/Motivo_No_Autorizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Motivo_No_Autorizaci_n__c</fullName>
    <label>Motivo No Autorización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>