unpackaged/main/default/objects/Order_Line_Item__c/fields/Numero_de_Lote__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Lote__c</fullName>
    <label>Número de Lote</label>
    <length>6</length>
    <type>Text</type>
</CustomField>