unpackaged/main/default/objects/Order_Line_Item__c/fields/Numero_de_Subalmacen__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Subalmacen__c</fullName>
    <formula>VALUE(Product__r.Subalmacen__r.Numero_de_Subalmacen__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero de Subalmacen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>