unpackaged/main/default/objects/Order_Line_Item__c/fields/Order_Line_Item_Classification__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Item Classification</label>
    <referenceTo>Order_Line_Item_Classification__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>