unpackaged/main/default/objects/Order_Line_Item__c/fields/Piezas_Faltantes__c.field-meta.xml
<CustomField>
    <fullName>Piezas_Faltantes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Aqui se guardan las piezas faltantes al momento de registrar una entrega parcial.</description>
    <label>Piezas Faltantes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>