unpackaged/main/default/objects/Order_Line_Item__c/fields/Tipo_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pedido__c</fullName>
    <formula>TEXT(Order__r.Tipo_de_Pedido__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Pedido</label>
    <type>Text</type>
</CustomField>