unpackaged/main/default/objects/Order_Line_Item__c/fields/Total_de_piezas_faltantes__c.field-meta.xml
<CustomField>
    <fullName>Total_de_piezas_faltantes__c</fullName>
    <label>Total de piezas faltantes</label>
    <summarizedField>Informacion_De_Lote__c.Cantidad_de_Piezas_Recibidas__c</summarizedField>
    <summaryForeignKey>Informacion_De_Lote__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>