unpackaged/main/default/objects/Order_Line_Item__c/fields/Total_de_piezas_recibidas__c.field-meta.xml
<CustomField>
    <fullName>Total_de_piezas_recibidas__c</fullName>
    <label>Total de piezas recibidas</label>
    <summarizedField>Informacion_De_Lote__c.Cantidad__c</summarizedField>
    <summaryForeignKey>Informacion_De_Lote__c.Order_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>