unpackaged/main/default/objects/Order_Line_Item__c/fields/UMU__c.field-meta.xml
<CustomField>
    <fullName>UMU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UMU</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Line Items (UMU)</relationshipLabel>
    <relationshipName>Order_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>