unpackaged/main/default/objects/Order_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>Cantidad_Aprobada__c</columns>
    <columns>Cantidad_Autorizada__c</columns>
    <columns>Cantidad_Colocada_en_SAP__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>